# epoch

./: .editorconfig  .gitignore  .gitmodules  Makefile  README.md  meson.build
projects/cli/include/: epochcli.h
projects/cli/src/: epochcli.c
projects/stub/: Makefile
projects/stub/include/: epoch.h
projects/stub/src/: epoch.c
